--- a/.github/workflows/update-pipeline-configs.yml
+++ b/.github/workflows/update-pipeline-configs.yml
@@ -1,7 +1,7 @@
 name: Update Pipeline Configs
 on:
   schedule:
-    - cron: "0 0 * * *" # Run every day at midnight
+   # - cron: "0 0 * * *" # Run every day at midnight
   workflow_dispatch:
 
 jobs:
